# neptun-chatbot

./: .gitignore  README.md  pyproject.toml
wbs_chatbot/chains/: QueryHistory.py  chat_rag_chain.py
wbs_chatbot/qdrant/: qdrant.py  upsert_products.py
wbs_chatbot/templates/: chat_model_temlate.py  upser_product_template.py
wbs_chatbot/ui/: interface.py
wbs_chatbot/utils/: clean_data.py  create_collection.py
